loco-cli/src/snapshots/loco_cli__generate__tests__can_collect_templates.snap
---
source: src/generate.rs
expression: collect_templates(&tree_res)
---
Ok(
    {
        "template-a": Template {
            description: "template_a",
            rules: Some(
                [
                    TemplateRule {
                        pattern: Regex(
                            "test",
                        ),
                        kind: LibName,
                        file_patterns: Some(
                            [
                                Regex(
                                    "rs",
                                ),
                            ],
                        ),
                    },
                ],
            ),
        },
        "template-b": Template {
            description: "template_b",
            rules: None,
        },
    },
)
