loco-cli/src/snapshots/loco_cli__generate__tests__can_generate-2.snap
---
source: src/generate.rs
expression: "fs::read_to_string(tree_res.join(\"test.yaml\"))"
---
Ok(
    "secret = RAND_SECRET\n",
)
