loco-cli/src/snapshots/loco_cli__generate__tests__can_generate-3.snap
---
source: src/generate.rs
expression: "fs::read_to_string(tree_res.join(\"any.yaml\"))"
---
Ok(
    "database:\n    uri: {{ get_env(name=\"DATABASE_URL\", default=\"postgres://lib_name_changed\n",
)
