loco-cli/src/snapshots/loco_cli__generate__tests__can_generate.snap
---
source: src/generate.rs
expression: "fs::read_to_string(tree_res.join(\"Cargo.toml\"))"
---
Ok(
    "name = \"lib_name_changed\n",
)
