loco-cli/src/snapshots/loco_cli__generate__tests__can_generate_skip_files-2.snap
---
source: src/generate.rs
expression: "fs::read_to_string(tree_res.join(\"test.yaml\"))"
---
Ok(
    "secret = skip_jwt_token\n",
)
