loco-cli/src/snapshots/loco_cli__generate__tests__can_generate_skip_files.snap
---
source: src/generate.rs
expression: "fs::read_to_string(tree_res.join(\"Cargo.toml\"))"
---
Ok(
    "name = \"skip_lib_name_changes\"\n",
)
